# CPP_GAME

./: .gitignore  CMakeLists.txt  build.bat  build.sh  main.c  main.cpp
include/: Entity.hpp  RenderWindow.hpp  render_window.h
src/: Entity.cpp  RenderWindow.cpp  render_window.c
